
<package>
  <name>multi_car</name>
  <version>0.1.0</version>
  <description>multi_car</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">http://gazebosim.org/w/index.php?title=Tutorials/1.9/Using_A_URDF_In_Gazebo</url>
  <url type="bugtracker">https://github.com/osrf/gazebo_ros_demos/issues</url>
  <url type="repository">https://github.com/osrf/gazebo_ros_demos</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sicktoolbox</build_depend>
  <build_depend>sicktoolbox_wrapper</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>velocity_controllers</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>

 
  <run_depend>tf2_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sicktoolbox</run_depend>
  <run_depend>sicktoolbox_wrapper</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>obstaclestopper</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>velodyne_pointcloud</run_depend>
 
  <export>
  </export>
</package> 
